--- a/src1/client/template/index.html
+++ b/src1/client/template/index.html
@@ -10,7 +10,7 @@
   <script>
     // window.REDUX_STORE = ${JSON.stringify(store.getState())}
   </script>
-  <div id="app"><!--html---></div>
+  <div id="app"><!--html--></div>
   <!--store--> 
 </body>
 </html>
